tests/ui/attributes/pointee.stderr
error: attribute should be applied to a function definition
  --> $DIR/pointee.rs:8:5
   |
LL |       #[pointee]
   |       ^^^^^^^^^^
LL | /     {
LL | |         1
LL | |     };
   | |_____- not a function definition

error: attribute should be applied to a function definition
  --> $DIR/pointee.rs:14:1
   |
LL | #[pointee]
   | ^^^^^^^^^^
LL | type InvalidTy = ();
   | -------------------- not a function definition

error: attribute should be applied to a function definition
  --> $DIR/pointee.rs:17:1
   |
LL | #[pointee]
   | ^^^^^^^^^^
LL | mod invalid_module {}
   | --------------------- not a function definition

error: attribute should be applied to a function definition
  --> $DIR/pointee.rs:21:13
   |
LL |     let _ = #[pointee]
   |             ^^^^^^^^^^
LL |     (|| 1);
   |     ------ not a function definition

error: attribute should be applied to a function definition
  --> $DIR/pointee.rs:25:1
   |
LL | #[pointee]
   | ^^^^^^^^^^
LL | struct F;
   | --------- not a function definition

error: attribute should be applied to a function definition
  --> $DIR/pointee.rs:28:1
   |
LL |   #[pointee]
   |   ^^^^^^^^^^
LL | / impl F {
LL | |     #[pointee]
LL | |     fn valid(&self) {}
LL | | }
   | |_- not a function definition

error: aborting due to 6 previous errors
